test: 외부 IO 고려 지연시간 추가 단일 스레드 테스트